--- a/it/download.po
+++ b/it/download.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,16 +41,21 @@ msgid ""
 "Further variants for iOS, Mac, Linux or Windows are planned.\n"
 "You can actively [support](contribute) us in the development."
 msgstr ""
+"Una versione per Android in fase beta è disponibile su F-Droid. Dopo la [versione 1.0](https://github.com/deltachat/deltachat-android/milestone/1) sarà disponibile anche su Google Play. \n"
+"Ulteriori versioni per iOS, Mac, Linux o Windows sono in programma.\n"
+"È possibile [contribuire](contribute) attivamente allo sviluppo."
 
 #: ../en/download.md:15
 msgid "## Android (Beta)"
-msgstr ""
+msgstr "## Android (Beta)"
 
 #: ../en/download.md:17
 msgid ""
 "[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
 "<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
+"[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
+"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 
 #: ../en/download.md:20
 msgid ""
@@ -58,27 +63,34 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %})"
 msgstr ""
+"* [Scarica da F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [Scarica il file APK](https://github.com/deltachat/deltachat-android/releases) (solo per utenti esperti)\n"
+"* [Guarda le modifiche introdotte]({% include changelog-url %})"
 
 #: ../en/download.md:25
 msgid "## Apple"
-msgstr ""
+msgstr "## Apple"
 
 #: ../en/download.md:27
 msgid ""
 "<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
 "AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
+"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
+"AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 
 #: ../en/download.md:29
 msgid "## Linux"
-msgstr ""
+msgstr "## Linux"
 
 #: ../en/download.md:31
 msgid ""
 "Delta Chat for Linux is not yet available. However it is possible to run the Android app in [Anbox](https://anbox.io) (Android in a Box) on your desktop.\n"
 "Further details are provided in our [FAQ](help#multiclient) page."
 msgstr ""
+"Delta Chat per Linux non è ancora disponibile. Tuttavia è possibile eseguire l'applicazione per Android in [Anbox](https://anbox.io) (Android in a Box) sul proprio desktop.\n"
+"Ulteriori dettagli sono disponibile nella nostra pagina delle [FAQ](help#multiclient)."
 
 #: ../en/download.md:34
 msgid "## Windows"
-msgstr ""
+msgstr "## Windows"
