--- a/it/features.po
+++ b/it/features.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,20 +36,25 @@ msgid ""
 "Delta Chat is a modern messenger. It is like email in a new dress. <br>Just "
 "better, safer and user-optimised."
 msgstr ""
+"Delta Chat è una moderna applicazione di messaggistica. È come avere le "
+"email in una nuova veste. <br>Solo migliore, più sicura e ottimizzata per "
+"gli utenti."
 
 #: ../en/features.md:10
 msgid ""
 "**Start immediately** <br> All you need is an email account. With it you can"
 " reach any email contact."
 msgstr ""
+"**Inizia subito** <br> Tutto ciò che ti server è un account email. In questo"
+" modo potrai raggiungere qualunque contatto email."
 
 #: ../en/features.md:12
 msgid "![Screenshot](../assets/features/start-img4.png)"
-msgstr ""
+msgstr "![Screenshot](../assets/features/start-img4.png)"
 
 #: ../en/features.md:14
 msgid "Make use of the numerous features and advantages:"
-msgstr ""
+msgstr "Utilizza le numerose caratteristiche e i vantaggi offerti:"
 
 #: ../en/features.md:16
 msgid ""
@@ -73,3 +78,6 @@ msgid ""
 "chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
 msgstr ""
+"Ulteriori ragioni e motivazioni possono essere trovate nel post [Delta makes"
+" chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
+"better) pubblicato sul blog."
