--- a/it/imprint.po
+++ b/it/imprint.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,6 +38,10 @@ msgid ""
 "Friedrich-Ebert-Str. 1 B  \n"
 "25348 Glückstadt, Germany"
 msgstr ""
+"Delta Chat  \n"
+"c/o Björn Petersen  \n"
+"Friedrich-Ebert-Str. 1 B  \n"
+"25348 Glückstadt, Germany"
 
 #: ../en/imprint.md:13
 msgid ""
@@ -45,13 +49,18 @@ msgid ""
 "Phone: +49 4124 603889  \n"
 "USt-IdNr. DE214707533"
 msgstr ""
+"Email: {% include email-link %}  \n"
+"Telefono: +49 4124 603889  \n"
+"USt-IdNr. DE214707533"
 
 #: ../en/imprint.md:17
 msgid "[Community channels](contribute)"
-msgstr ""
+msgstr "[Canali della comunità](contribute)"
 
 #: ../en/imprint.md:19
 msgid ""
 "The mailing list server is operated through "
 "<https://github.com/codespeaknet/sysadmin>."
 msgstr ""
+"Il server per la mailing list funziona attraverso "
+"<https://github.com/codespeaknet/sysadmin>."
