--- a/ru/contribute.po
+++ b/ru/contribute.po
@@ -23,29 +23,29 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: Contribute\n"
+"title: Сделать вклад\n"
 "layout: default-ru\n"
 "---"
 
 #: ../en/contribute.md:6
 msgid "# How to support us"
-msgstr "# Как поддержать нас"
+msgstr "# Как внести свой вклад"
 
 #: ../en/contribute.md:8
 msgid ""
 "Delta Chat is open source and free of charge. You can contribute in many "
 "ways to bring the development further!"
 msgstr ""
-"Delta Chat с открытым исходным кодом и вы можете поддержать его дальнейшее "
-"развитие."
+"Delta Chat бесплатное приложение с открытым исходным кодом. Вы можете внести"
+" свой вклад различными путями для дальнейшего развития его разработки ."
 
 #: ../en/contribute.md:11
 msgid "# Channels"
-msgstr ""
+msgstr "# Каналы связи"
 
 #: ../en/contribute.md:13
 msgid "If you want to talk with us you may:"
-msgstr ""
+msgstr "Вы можете пообщаться с нами:"
 
 #: ../en/contribute.md:15
 msgid ""
@@ -53,18 +53,21 @@ msgid ""
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 msgstr ""
+"- Подписавшись на рассылку [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) обсуждений сообщества\n"
+"- Приняв участие в разработке в [Github Delta Chat repositories](https://github.com/deltachat/)\n"
+"- Подключившись к IRC **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
-msgstr "## Пожертвования"
+msgstr "# Пожертвования"
 
 #: ../en/contribute.md:22
 msgid ""
 "Delta Chat development costs **money**. Your donation will support future "
 "improvements directly."
 msgstr ""
-"Разработка Delta Chat стоит денег. Ваше пожертвование непосредственно "
-"поддержит будущие улучшения."
+"Разработка Delta Chat стоит **денег**. Ваше пожертвование поддержит "
+"разработку и будущие улучшения напрямую."
 
 #: ../en/contribute.md:24
 msgid ""
@@ -81,10 +84,12 @@ msgid ""
 "We need **devices** for test purposes. Do you have any disused Android Smartphone or iPhone?\n"
 "[We](imprint)'d love to take it!"
 msgstr ""
+"Мы нуждаемся в **устройствах** для тестирования. Если у вас есть ненужный смартфон на базе Android или iPhone?\n"
+"[Мы](imprint) с удовольствием примем их в дар!"
 
 #: ../en/contribute.md:31
 msgid "# Translation"
-msgstr "# Переводы"
+msgstr "# Перевод"
 
 #: ../en/contribute.md:33
 msgid ""
@@ -92,6 +97,9 @@ msgid ""
 "[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
+"Помогайте в переводе приложения Delta Chat или веб сайта delta.chat на ваш язык\n"
+"[Transifex](https://www.transifex.com/delta-chat/public/).\n"
+"Наконец, вы можете просто загрузить [этот файл](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) и [отправить](imprint) нам уже переведённую версию."
 
 #: ../en/contribute.md:37
 msgid ""
@@ -99,20 +107,19 @@ msgid ""
 "page and the contact with the translators."
 msgstr ""
 "Мы также ищем людей, которые хотели бы поддерживать страницу Transifex и "
-"контакт с переводчиками."
+"контакт с русскоязычными переводчиками."
 
 #: ../en/contribute.md:40
 msgid "# Development"
-msgstr "# Разработчикам"
+msgstr "# Разработка"
 
 #: ../en/contribute.md:42
 msgid ""
 "We are looking for open source developers who are familiar with C, Java, Android, iOS, Windows, Linux or Mac.\n"
 "Edit your own [Delta Chat](https://github.com/deltachat/) fork and send a pull request."
 msgstr ""
-"Конечно же разработчиков открытого программного обеспечения принимаем "
-"радушно! Just make your improvements to your [Delta Chat "
-"fork](https://github.com/deltachat/) and send a pull request."
+"Нам ищем программистов для открытой разработки, того кто хорошо разбирается в C, Java, Android, iOS, Windows, Linux or Mac.\n"
+"Создайте собственный [Delta Chat](https://github.com/deltachat/) форк и сделайте запрос на слияние."
 
 #: ../en/contribute.md:45
 msgid ""
@@ -121,13 +128,14 @@ msgid ""
 "[here](https://github.com/deltachat/deltachat-pages) and send us a pull "
 "request."
 msgstr ""
-"У вас есть отличные идеи или небольшие улучшения для этого **сайта?** Просто"
-" [отредактируйте здесь](https://github.com/deltachat/deltachat-pages) и "
-"отправьте запрос на слияние."
+"Тоже самое и для нашего **сайта** - неважно какие у вас улучшения, большие "
+"или маленькие: просто отредактируйте страницу "
+"[здесь](https://github.com/deltachat/deltachat-pages) и отправьте запрос на "
+"слияние."
 
 #: ../en/contribute.md:47
 msgid "# Recommendation"
-msgstr "# Распространяйте ..."
+msgstr "# Рекомендуйте"
 
 #: ../en/contribute.md:49
 msgid ""
@@ -136,9 +144,9 @@ msgid ""
 "With Version 1.0 Delta Chat will become market-ready and a recommendation "
 "for _everyone_. "
 msgstr ""
-"... однако в настоящее время Delta Chat все ещё находится в бета-состоянии и"
-" подходит только для ранних последователей. Как только Delta Chat достигнет "
-"версии \"1.0\", это будет рекомендацией для всех."
+"В данный момент Delta Chat все ещё находится в состоянии бета и "
+"рекомендуется только первопроходцам. Как только Delta Chat достигнет версии "
+"\"1.0\", то будет рекомендован для всех."
 
 #: ../en/contribute.md:52
 msgid "# Bug Reports"
@@ -147,8 +155,9 @@ msgstr "# Отчёты об ошибках"
 #: ../en/contribute.md:54
 msgid "Use the following **Issue Trackers** to report bugs."
 msgstr ""
-"Используйте наши **трекеры**, чтобы сообщить об ошибке. Если это возможно, "
-"пожалуйста, добавьте подробное описание; скриншот тоже часто полезен. "
+"Используйте наши **Трекеры**, чтобы сообщать об ошибках. По возможности, "
+"постарайтесь предоставлять как можно больше информации для фиксации ошибок и"
+" их дальнейшего устранения."
 
 #: ../en/contribute.md:56
 msgid ""
@@ -156,3 +165,6 @@ msgid ""
 "- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
 "- [Core Library + Python](https://github.com/deltachat/deltachat-core/issues)"
 msgstr ""
+"- [Delta Chat Android](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Core Library + Python](https://github.com/deltachat/deltachat-core/issues)"
