--- a/ru/download.po
+++ b/ru/download.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Andrey, 2018\n"
+"Last-Translator: guland2000 <lycoris@ya.ru>, 2018\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,16 +42,21 @@ msgid ""
 "Further variants for iOS, Mac, Linux or Windows are planned.\n"
 "You can actively [support](contribute) us in the development."
 msgstr ""
+"Версия программы в статусе бета для Android доступна на F-Droid. После [версии 1.0](https://github.com/deltachat/deltachat-android/milestone/1) будет доступна и на Google Play. \n"
+"Кроме того в планах выпустить приложение и для iOS, Mac, Linux или Windows.\n"
+"Вы также можете принять активное [участие](contribute) в разработке."
 
 #: ../en/download.md:15
 msgid "## Android (Beta)"
-msgstr "## Android (Beta)"
+msgstr "## Android (Бета)"
 
 #: ../en/download.md:17
 msgid ""
 "[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
 "<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
+"[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
+"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 
 #: ../en/download.md:20
 msgid ""
@@ -59,6 +64,9 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %})"
 msgstr ""
+"* [Загрузить из F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [Загрузить .apk файл](https://github.com/deltachat/deltachat-android/releases) (только для продвинутых пользователей)\n"
+"* [Посмотреть список изменений]({% include changelog-url %})"
 
 #: ../en/download.md:25
 msgid "## Apple"
@@ -69,6 +77,8 @@ msgid ""
 "<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
 "AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
+"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
+"AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 
 #: ../en/download.md:29
 msgid "## Linux"
@@ -79,6 +89,8 @@ msgid ""
 "Delta Chat for Linux is not yet available. However it is possible to run the Android app in [Anbox](https://anbox.io) (Android in a Box) on your desktop.\n"
 "Further details are provided in our [FAQ](help#multiclient) page."
 msgstr ""
+"Delta Chat для Linux пока недоступен. Тем не менее вы можете запустить Android приложение в [Anbox](https://anbox.io) (Android in a Box) на вашем ПК.\n"
+"Более подробная информация представлена ​на [FAQ](help#multiclient) странице."
 
 #: ../en/download.md:34
 msgid "## Windows"
