--- a/ru/features.po
+++ b/ru/features.po
@@ -23,31 +23,29 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: Почему Delta Chat? Ваши преимущества.\n"
+"title: Зачем\n"
 "layout: default-ru\n"
 "---"
 
 #: ../en/features.md:6
 msgid "# What Delta Chat offers"
-msgstr "# Почему Delta Chat? Ваши преимущества."
+msgstr "# Что предлагает Delta Chat"
 
 #: ../en/features.md:8
 msgid ""
 "Delta Chat is a modern messenger. It is like email in a new dress. <br>Just "
 "better, safer and user-optimised."
 msgstr ""
-"**Delta Chat** - это проект, который призван создать приложение обмена сообщениями, которое \n"
-"полностью **совместимо** с существующей **децентрализованной** инфраструктурой электронной почты."
+"Delta Chat это современный мессенджер. Как электронная почта в новом "
+"обличии. <br>Только лучше, безопасней и оптимизирован для пользователя."
 
 #: ../en/features.md:10
 msgid ""
 "**Start immediately** <br> All you need is an email account. With it you can"
 " reach any email contact."
 msgstr ""
-"Так, с Delta Chat вы получаете **удобство** известных мессенджеров с\n"
-"**охватом** электронной почты. Более того, вы **независимы** от других компаний или \n"
-"служб - так как ваши данные не связаны с Delta Chat, вы также не добавите здесь новых\n"
-"зависимостей."
+"**Начать немедленно** <br> Всё что вам нужно это аккаунт электронной почты. "
+"С ним у вас сразу появится список контактов."
 
 #: ../en/features.md:12
 msgid "![Screenshot](../assets/features/start-img4.png)"
@@ -55,7 +53,7 @@ msgstr "![Screenshot](../assets/features/start-img4.png)"
 
 #: ../en/features.md:14
 msgid "Make use of the numerous features and advantages:"
-msgstr "Кратко о некоторых возможностях:"
+msgstr "Воспользуйтесь многочисленными функциями и преимуществами:"
 
 #: ../en/features.md:16
 msgid ""
@@ -72,17 +70,18 @@ msgid ""
 "- Anonymous: **Metadata** like _Who_ communicates with _Whom_, _When_ and _Where_ is **not collected**\n"
 "- Dynamic: Delta Chat offers **group chats**"
 msgstr ""
-"- **Нет сервера Delta Chat:** приложение подключается только к вашему серверу электронной почты.\n"
-"- **Быстрые уведомления** путём использования Push-IMAP\n"
-"- **Большая аудитория** - все владельцы электронной почты могут быть получателями, даже если они не используют (пока) Delta Chat\n"
-"- **Совместимость** - соответствует любой другой программе электронной почты\n"
-"- **Элегантный** и **простой** пользовательский интерфейс\n"
-"- **Безопасность** - при возможности сообщения шифруются автоматически (показывается замочек)\n"
-"- **Распределённая** связь с другими доменами на основе федерации почтовых серверов\n"
-"- **Нет спама** - по умолчанию отображаются только сообщения известных пользователей\n"
-"- **Надёжный** - безопасен для профессионального использования\n"
-"- **Заслуживающий доверия** - может быть использован даже для деловой переписки\n"
-"- Полностью **открытый исходный код** и основан на **стандартах**"
+"- Delta Chat - это мессенджер с самой большой базой данных **в мире**: Совместим с любым почтовым клиентом на любой операционной системе\n"
+"- Распределенная архитектура: Отсутствует **центральный сервер** Delta Chat ** **\n"
+"- Независим: Вы **независимы** от любой внешней службы или сервера - Delta Chat использует только ваш почтовый сервер.\n"
+"- Ваша учетная запись не зависит от номера мобильного телефона\n"
+"- Быстрый: **Push-сообщения** за секунды - Быстрый интерфейс\n"
+"- Мощный: **Неограниченное** количество чатов, изображений, видео, аудио сообщений и многое другое - Мультиклиентность\n"
+"- Бесплатно: Delta Chat всегда будет: **Бесплатен** - Open Source - **Без рекламы** - Без подписки\n"
+"- Безопасно: **Шифрование** всеми распространенными алгоритмами - Открыто для просмотра исходного кода\n"
+"- Защищено: Delta Chat защищает вас от **спама**\n"
+"- Законность: Ваша **телефонная книга** остаётся на вашем смартфоне - она ​​никуда **не загружается**\n"
+"- Анонимость: **Метаданные**, такие как _Who_ общается с _Whom_, _When_ и _Where_ **не собираются**\n"
+"- Динамичность: Delta Chat предлагает **групповые чаты**"
 
 #: ../en/features.md:30
 msgid ""
@@ -90,3 +89,6 @@ msgid ""
 "chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
 msgstr ""
+"Другие причины и мотивы могут быть найдены в нашем блоге [Дельта делает "
+"переписку лучше](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
+"better)."
