--- a/ru/imprint.po
+++ b/ru/imprint.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: guland2000 <lycoris@ya.ru>, 2018\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,13 +23,13 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: Выходные данные\n"
+"title: Контакты\n"
 "layout: default-ru\n"
 "---"
 
 #: ../en/imprint.md:6
 msgid "# Imprint"
-msgstr "# Выходные данные"
+msgstr "# Контакты"
 
 #: ../en/imprint.md:8
 msgid ""
@@ -38,6 +38,11 @@ msgid ""
 "Friedrich-Ebert-Str. 1 B  \n"
 "25348 Glückstadt, Germany"
 msgstr ""
+"Delta Chat  \n"
+"c/o Björn Petersen  \n"
+"Friedrich-Ebert-Str. 1 B  \n"
+"25348 Glückstadt, Germany\n"
+"Федеративная Республика Германия"
 
 #: ../en/imprint.md:13
 msgid ""
@@ -45,13 +50,16 @@ msgid ""
 "Phone: +49 4124 603889  \n"
 "USt-IdNr. DE214707533"
 msgstr ""
+"E-mail: {% include email-link %}  \n"
+"Телефон: +494124603889  \n"
+"USt-IdNr. DE214707533"
 
 #: ../en/imprint.md:17
 msgid "[Community channels](contribute)"
-msgstr ""
+msgstr "[Сообщество](contribute)"
 
 #: ../en/imprint.md:19
 msgid ""
 "The mailing list server is operated through "
 "<https://github.com/codespeaknet/sysadmin>."
-msgstr ""
+msgstr "Сервер рассылок <https://github.com/codespeaknet/sysadmin>."
