--- a/pt/download.po
+++ b/pt/download.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-23 00:02+0200\n"
+"POT-Creation-Date: 2018-05-03 13:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
@@ -42,43 +42,70 @@ msgid ""
 "You can actively [support](contribute) us in the development."
 msgstr ""
 
-#: ../en/download.md:15
+#: ../en/download.md:14
 msgid "## Android (Beta)"
 msgstr ""
 
-#: ../en/download.md:17
+#: ../en/download.md:16
 msgid ""
-"[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
-"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
+"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"float:right; filter: opacity(.3) grayscale(100%);\" />\n"
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 msgstr ""
 
-#: ../en/download.md:20
+#: ../en/download.md:19
 msgid ""
 "* [Download from F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %})"
 msgstr ""
 
-#: ../en/download.md:25
+#: ../en/download.md:24
 msgid "## Apple"
 msgstr ""
 
-#: ../en/download.md:27
+#: ../en/download.md:26
 msgid ""
 "<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
-"AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
+"AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) "
+"grayscale(100%);\" />"
 msgstr ""
 
-#: ../en/download.md:29
-msgid "## Linux"
+#: ../en/download.md:28
+msgid ""
+"iOS development has started but it needs more work until we can present a "
+"download here. [Contributors](contribute) welcome :)"
 msgstr ""
 
 #: ../en/download.md:31
+msgid "## Linux"
+msgstr ""
+
+#: ../en/download.md:33
 msgid ""
 "Delta Chat for Linux is not yet available. However it is possible to run the Android app in [Anbox](https://anbox.io) (Android in a Box) on your desktop.\n"
 "Further details are provided in our [FAQ](help#multiclient) page."
 msgstr ""
 
-#: ../en/download.md:34
-msgid "## Windows"
+#: ../en/download.md:37
+msgid "# Verify Downloads"
+msgstr ""
+
+#: ../en/download.md:39
+msgid ""
+"For Android, you can verify the signing certificate on the APK matches one "
+"of the following SHA256 fingerprints:  "
+msgstr ""
+
+#: ../en/download.md:41
+msgid ""
+"* For F-Droid downloads:  \n"
+"  `{% include fingerprint-f-droid %}`\n"
+"* Other APK downloads:  \n"
+"  `{% include fingerprint-local %}`"
+msgstr ""
+
+#: ../en/download.md:46
+msgid ""
+"To print the SHA256 fingerprints of the APK signing certificate you can use eg.  \n"
+"`keytool -list -printcert -jarfile <APK-file>`"
 msgstr ""
