--- a/ca/download.po
+++ b/ca/download.po
@@ -6,13 +6,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-03 13:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Telegram Polska <sebek@life.pl>, 2018\n"
-"Language-Team: Polish (https://www.transifex.com/delta-chat/teams/76181/pl/)\n"
+"Last-Translator: Calbasi <joan@calbasi.net>, 2018\n"
+"Language-Team: Catalan (https://www.transifex.com/delta-chat/teams/76181/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pl\n"
-"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
+"Language: ca\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Translate Toolkit 1.13.0\n"
 
 #: ../en/download.md:1
@@ -23,17 +23,17 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: Pobierz\n"
-"layout: default-pl\n"
+"title: Descàrrega\n"
+"layout: default-ca\n"
 "---"
 
 #: ../en/download.md:6
 msgid "# Download Delta Chat"
-msgstr "# Pobierz Delta Chat"
+msgstr "# Descarrega't Delta Chat"
 
 #: ../en/download.md:8
 msgid "**Delta Chat is currently under development**"
-msgstr "**Delta Chat jest obecnie w fazie rozwoju**"
+msgstr "**Hores d'ara Delta Chat està en desenvolupament**"
 
 #: ../en/download.md:10
 msgid ""
@@ -41,9 +41,9 @@ msgid ""
 "Further variants for iOS, Mac, Linux or Windows are planned.\n"
 "You can actively [support](contribute) us in the development."
 msgstr ""
-"Wersja beta dla systemu Android jest dostępna na platformie F-Droid. Po wydaniu [wersji 1.0](https://github.com/deltachat/deltachat-android/milestone/1) Delta Chat zostanie udostępniony w Google Play. \n"
-"Planowane są kolejne warianty dla iOS, Mac, Linux lub Windows.\n"
-"Możesz aktywnie [wspierać](contribute) nas w rozwoju."
+"Hi ha una versió beta disponible per Android a F-Droid. Passada la [fita de la versió 1.0](https://github.com/deltachat/deltachat-android/milestone/1) vindrà la disponibilitat a Google Play. \n"
+"Hi ha planificades futures variants per iOS, Mac, Linux or Windows.\n"
+"Pots [ajudar](contribute)-nos en el seu desenvolupament."
 
 #: ../en/download.md:14
 msgid "## Android (Beta)"
@@ -54,8 +54,6 @@ msgid ""
 "<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"float:right; filter: opacity(.3) grayscale(100%);\" />\n"
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 msgstr ""
-"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"float:right; filter: opacity(.3) grayscale(100%);\" />\n"
-"[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 
 #: ../en/download.md:19
 msgid ""
@@ -63,9 +61,9 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %})"
 msgstr ""
-"* [Pobierz z F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
-"* [Pobierz APK](https://github.com/deltachat/deltachat-android/releases) (tylko doświadczeni użytkownicy)\n"
-"* [Przejrzyj rejestr zmian]({% include changelog-url %})"
+"* [Descarrega'l de F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [Descarrega l'APK](https://github.com/deltachat/deltachat-android/releases) (només per usuaris experimentats)\n"
+"* [Mira el Changelog]({% include changelog-url %})"
 
 #: ../en/download.md:24
 msgid "## Apple"
@@ -77,18 +75,12 @@ msgid ""
 "AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) "
 "grayscale(100%);\" />"
 msgstr ""
-"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
-"AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) "
-"grayscale(100%);\" />"
 
 #: ../en/download.md:28
 msgid ""
 "iOS development has started but it needs more work until we can present a "
 "download here. [Contributors](contribute) welcome :)"
 msgstr ""
-"Prace nad rozwojem wersji na iOS już się rozpoczęły, ale wymaga to więcej "
-"pracy, zanim będziemy mogli zaprezentować tutaj plik do pobrania. Zapraszamy"
-" do [wsparcia](contribute) :)"
 
 #: ../en/download.md:31
 msgid "## Linux"
@@ -99,20 +91,18 @@ msgid ""
 "Delta Chat for Linux is not yet available. However it is possible to run the Android app in [Anbox](https://anbox.io) (Android in a Box) on your desktop.\n"
 "Further details are provided in our [FAQ](help#multiclient) page."
 msgstr ""
-"Delta Chat dla systemu Linux jeszcze nie jest dostępny. Możliwe jest jednak uruchamianie aplikacji na Androida w [Anbox](https://anbox.io) (Android in a Box) na pulpicie.\n"
-"Więcej informacji znajduje się na naszej stronie [FAQ](help#multiclient)."
+"Encara no està disponible Delta Chat per Linux. Tan mateix és possible executar l'app d'Android a [Anbox](https://anbox.io) (Android in a Box) al teu escriptori.\n"
+"Per més informació, consulta la nostra pàgina de  [FAQ](help#multiclient)."
 
 #: ../en/download.md:37
 msgid "# Verify Downloads"
-msgstr "# Weryfikacja pobranych plików"
+msgstr ""
 
 #: ../en/download.md:39
 msgid ""
 "For Android, you can verify the signing certificate on the APK matches one "
 "of the following SHA256 fingerprints:  "
 msgstr ""
-"W przypadku systemu Android można sprawdzić, czy certyfikat APK jest zgodny "
-"z jednym z poniższych odcisków palców SHA256: "
 
 #: ../en/download.md:41
 msgid ""
@@ -121,15 +111,9 @@ msgid ""
 "* Other APK downloads:  \n"
 "  `{% include fingerprint-local %}`"
 msgstr ""
-"* Dla plików pobranych z F-Droid:  \n"
-"  `{% include fingerprint-f-droid %}`\n"
-"* Dla plików pobranych z innych miejsc:  \n"
-"  `{% include fingerprint-local %}`"
 
 #: ../en/download.md:46
 msgid ""
 "To print the SHA256 fingerprints of the APK signing certificate you can use eg.  \n"
 "`keytool -list -printcert -jarfile <APK-file>`"
 msgstr ""
-"Do wydrukowania odcisków palców SHA256 certyfikatu podpisu aplikacji można użyć np.  \n"
-"`keytool -list -printcert -jarfile <APK-file>`"
