update web irc links

--- a/_posts/2018-03-19-delta-chat-0.16.0-ad-hoc-groups.md
+++ b/_posts/2018-03-19-delta-chat-0.16.0-ad-hoc-groups.md
@@ -22,5 +22,5 @@ This version requires the additional **right to access the camera**. This is nee
 
 - We have a **mailing list** now, you can [subscribe here](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)
 
-- We also use the **IRC channel #deltachat** on freenode now - if you do not have an IRC client, you can also use access it via the [web](https://webchat.freenode.net/?uio=MTE9MjA16a&channels=%23deltachat)
+- We also use the **IRC channel #deltachat** on freenode now - if you do not have an IRC client, you can also use access it via [KiwiIRC]({% include webirc-url %}) or [qwebirc](https://webchat.freenode.net/?uio=MTE9MjA16a&channels=%23deltachat) [EDIT: KiwiIRC added]
 
