--- a/fr/contribute.po
+++ b/fr/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Arnaud Pernet, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
@@ -51,11 +51,8 @@ msgstr "Pour nous contacter, vous pouvez:"
 msgid ""
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
-"- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
-"- Rejoindre les discussions de la communauté sur la [liste de diffusion Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
-"- Collaborer au travers des [dépôts Github Delta Chat](https://github.com/deltachat/)\n"
-"- Rejoindre le canal IRC **#deltachat** sur [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
