--- a/pt/features.po
+++ b/pt/features.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
@@ -36,20 +36,22 @@ msgid ""
 "Delta Chat is a modern messenger. It is like email in a new dress. <br>Just "
 "better, safer and user-optimised."
 msgstr ""
+"O Delta Chat é um app moderno. É como um e-mail numa nova roupagem. <br>Só "
+"que melhor, mais seguro e melhorado."
 
 #: ../en/features.md:10
 msgid ""
 "**Start immediately** <br> All you need is an email account. With it you can"
 " reach any email contact."
-msgstr ""
+msgstr "**Comece já** <br> Basta um e-mail e você poderá contatar todo mundo."
 
 #: ../en/features.md:12
 msgid "![Screenshot](../assets/features/start-img4.png)"
-msgstr ""
+msgstr "![Screenshot](../assets/features/start-img4.png)"
 
 #: ../en/features.md:14
 msgid "Make use of the numerous features and advantages:"
-msgstr ""
+msgstr "Desfrute de diversas vantagens:"
 
 #: ../en/features.md:16
 msgid ""
@@ -66,6 +68,18 @@ msgid ""
 "- Anonymous: **Metadata** like _Who_ communicates with _Whom_, _When_ and _Where_ is **not collected**\n"
 "- Dynamic: Delta Chat offers **group chats**"
 msgstr ""
+"- O Delta Chat é um app com a **maior quantidade de contatos no mundo**: Qualquer e-mail e Sistema Operacional é compatível\n"
+"- Arquitetura distribuída: **Não há servidor central** do Delta Chat\n"
+"- Independente: Seja **livre** de qualquer serviço adicional - o Delta Chat precisa apenas de seu e-mail.\n"
+"- Sua conta não precisa de um número de telefone\n"
+"- Rápido: **Envie menssagens** em segundos - Interface veloz\n"
+"- Poderoso: **Sem limites** de chats, imagens, vídeos, áudios e mais\n"
+"- Livre: O Delta Chat sempre será: **livre de taxas** - de Código Livre - **livre de publicidade** - independente de novas contas\n"
+"- Seguro: **Criptografado** com algoritimos padronizados - código aberto para auditoria\n"
+"- Protege você dos **spams**\n"
+"- Respeita seus direitos fundamentais: Seus **contatos** não serão devassados - Ficarão intocados **no seu telefone**\n"
+"- Anônimo: **Metadados** como _quem_ fala com _quem_, _quando_ e _de onde_ **não são coletados**\n"
+"- Dinâmico: O Delta Chat dispõe de **grupos de chat**"
 
 #: ../en/features.md:30
 msgid ""
@@ -73,3 +87,6 @@ msgid ""
 "chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
 msgstr ""
+"Mais razões e motivos podem ser vistos no seguinte post: [Delta makes "
+"chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
+"better)."
