--- a/sq/contribute.po
+++ b/sq/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Besnik <besnik@programeshqip.org>, 2018\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
@@ -51,11 +51,11 @@ msgstr "Nëse doni të bisedoni me ne:"
 msgid ""
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
-"- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
-"- Merrni pjesë te [lista e postimeve mbi Delta Chat-in](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) për të ndjekur diskutimet e bashkësisë\n"
-"- Bashkëpunojmë përmes [deposh Github Delta Chat](https://github.com/deltachat/)\n"
-"- Na gjeni te kanali IRC **#deltachat** në [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Për diskutime te bashkësia, merrni pjesë te [lista e postimeve mbi Delta Chat-in](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
+"- Bashkëpunoni përmes [depove Github Delta Chat](https://github.com/deltachat/)\n"
+"- Ejani te kanali IRC **#deltachat** në freenode - lehtësisht përmes [Web IRC]({% include webirc-url %})"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
