--- a/de/contribute.po
+++ b/de/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
@@ -51,11 +51,11 @@ msgstr "Die folgenden Kontaktkanäle stehen zur Verfügung:"
 msgid ""
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
-"- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
 "- Die [Delta Chat Mailingliste](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
 "- Die [Github Delta Chat Repositories](https://github.com/deltachat/)\n"
-"- Der IRC-Kanal **#deltachat** auf [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Der IRC-Kanal **#deltachat** auf freenode - z.B. über [Web IRC]({% include webirc-url %})"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
