--- a/it/contribute.po
+++ b/it/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
@@ -50,11 +50,8 @@ msgstr "Per entrare in contatto con noi è possibile:"
 msgid ""
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
-"- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
-"- Iscriversi alla [mailing list di Delta Chat ](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) per discutere con la comunità\n"
-"- Collaborareattraverso il [repository di Delta Chat su Github ](https://github.com/deltachat/)\n"
-"- Entrare nel canale IRC **#deltachat** su [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
