--- a/nb/contribute.po
+++ b/nb/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
@@ -51,11 +51,8 @@ msgstr "Hvis du ønsker å snakke med oss kan du:"
 msgid ""
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
-"- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
-"- Ta del i [Delta Chat-e-postlisten](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for fellesskapsdiskusjoner\n"
-"- Samarbeid på [GitHub-kodelageret til Delta Cha]t(https://github.com/deltachat/)\n"
-"- Ta del i IRC-kanalen **#deltachat** på [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
