--- a/pt/contribute.po
+++ b/pt/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-03 13:49+0200\n"
+"POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
@@ -39,18 +39,21 @@ msgstr "Delta Chat é de código aberto e você pode nos ajudar a desenvolvê-lo
 
 #: ../en/contribute.md:11
 msgid "# Channels"
-msgstr ""
+msgstr "# Canais"
 
 #: ../en/contribute.md:13
 msgid "If you want to talk with us you may:"
-msgstr ""
+msgstr "Se você quer contatar-nos você pode:"
 
 #: ../en/contribute.md:15
 msgid ""
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
-"- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
+"- Entrar no [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) para conversar com a comunidade\n"
+"- Colaborar pelos [repositórios Github do Delta Chat](https://github.com/deltachat/)\n"
+"- Entrar no canal IRC **#deltachat** no [Freenode]({% include webirc-url %})"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
@@ -70,12 +73,17 @@ msgid ""
 "- PayPal or credit card: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
 "- Send bitcoins to [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 msgstr ""
+"- IBAN DE86100777770428658900, BIC NORSDE51XXX\n"
+"- PayPal ou cartão de crédito: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
+"- Bitcoins para [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 
 #: ../en/contribute.md:28
 msgid ""
 "We need **devices** for test purposes. Do you have any disused Android Smartphone or iPhone?\n"
 "[We](imprint)'d love to take it!"
 msgstr ""
+"Precisamos de **aparelhos** para fins de teste. Você tem algum smartphone velho?\n"
+"[We](imprint)'d love to take it!"
 
 #: ../en/contribute.md:31
 msgid "# Translation"
@@ -87,14 +95,17 @@ msgid ""
 "[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
+"Ajude a traduzir o Delta Chat (app ou site) na sua língua usando\n"
+"[Transifex](https://www.transifex.com/delta-chat/public/).\n"
+"Alternativamente, você pode baixar [este arquivo](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) e [encaminhar](imprint) a sua tradução."
 
 #: ../en/contribute.md:37
 msgid ""
 "We're also searching for people who would like to maintain the Transifex "
 "page and the contact with the translators."
 msgstr ""
-"Estamos precisando de alguém que ajude no gerenciamento da página do "
-"Transifex e mantenha contato com os tradutores."
+"Precisamos de alguém que ajude no gerenciamento da página do Transifex e "
+"mantenha contato com os tradutores."
 
 #: ../en/contribute.md:40
 msgid "# Development"
