fix syntax error in frontmatter

--- a/_posts/2018-05-24-gdpr.md
+++ b/_posts/2018-05-24-gdpr.md
@@ -1,6 +1,6 @@
 ---
-title: Time to relax: Delta Chat and the GDPR
-author: holger, Janka
+title: "Time to relax: Delta Chat and the GDPR"
+author: "holger, Janka"
 ---
 
 GDPR? It's time to relax with Delta.chat :) 
